# Streamlit_AISC_Dashboard

./: .gitignore  Docker-compose.yaml  Dockerfile  README.md  app.py  pyproject.toml  scratch_paper.ipynb
data/: .~lock.database.xlsx#  aisc-shapes-database-v15.0.xlsx  database.csv  database.xlsx  description.xlsx
